--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.food.snack_time">
     <application
-        android:label="pathao_app"
+        android:label="Snack Time"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
