--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_svg: ^2.0.9
   font_awesome_flutter: ^10.6.0
   cupertino_icons: ^1.0.5
+  dots_indicator: ^3.0.0
 
 dev_dependencies:
   flutter_test:
