--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   provider: ^6.1.1
+  get: ^4.6.6
   flutter_svg: ^2.0.9
   font_awesome_flutter: ^10.6.0
   cupertino_icons: ^1.0.5
