--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   cupertino_icons: ^1.0.5
   dots_indicator: ^3.0.0
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
